--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -32,7 +32,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="87">
+    <Units Count="88">
       <Unit0>
         <Filename Value="KaM_Remake.dpr"/>
         <IsPartOfProject Value="True"/>
@@ -208,7 +208,7 @@
         <TopLine Value="23"/>
         <CursorPos X="49" Y="37"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="125"/>
+        <UsageCount Value="128"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit16>
       <Unit17>
@@ -262,8 +262,8 @@
         <UnitName Value="KM_Game"/>
         <EditorIndex Value="4"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="956"/>
-        <CursorPos X="1" Y="972"/>
+        <TopLine Value="94"/>
+        <CursorPos X="38" Y="102"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -284,27 +284,22 @@
         <Filename Value="KM_InterfaceGamePlay.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_InterfaceGamePlay"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="294"/>
-        <CursorPos X="1" Y="309"/>
+        <TopLine Value="1671"/>
+        <CursorPos X="63" Y="1687"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit23>
       <Unit24>
         <Filename Value="KM_InterfaceMainMenu.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_InterfaceMainMenu"/>
-        <EditorIndex Value="5"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="889"/>
-        <CursorPos X="1" Y="905"/>
+        <TopLine Value="942"/>
+        <CursorPos X="62" Y="958"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit24>
       <Unit25>
@@ -403,10 +398,10 @@
         <Filename Value="KM_Settings.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Settings"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="113"/>
-        <CursorPos X="35" Y="123"/>
+        <TopLine Value="255"/>
+        <CursorPos X="26" Y="262"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -416,11 +411,14 @@
         <Filename Value="KM_Sound.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Sound"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="55"/>
-        <CursorPos X="77" Y="58"/>
+        <TopLine Value="1"/>
+        <CursorPos X="32" Y="3"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit35>
       <Unit36>
@@ -743,12 +741,12 @@
         <Filename Value="KM_Units_Warrior.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Units_Warrior"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="5"/>
         <WindowIndex Value="0"/>
         <TopLine Value="184"/>
         <CursorPos X="11" Y="190"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="29"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit74>
@@ -823,10 +821,10 @@
         <UnitName Value="KM_Music"/>
         <EditorIndex Value="3"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="13"/>
-        <CursorPos X="1" Y="30"/>
+        <TopLine Value="98"/>
+        <CursorPos X="3" Y="116"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="12"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit83>
@@ -858,127 +856,137 @@
         <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit86>
+      <Unit87>
+        <Filename Value="..\..\Lazarus\fpc\2.4.1\source\rtl\objpas\math.pp"/>
+        <UnitName Value="math"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="2058"/>
+        <CursorPos X="3" Y="2063"/>
+        <SyntaxHighlighter Value="FreePascal"/>
+        <UsageCount Value="10"/>
+        <DefaultSyntaxHighlighter Value="Text"/>
+      </Unit87>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="14" Column="8" TopLine="1"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="237" Column="3" TopLine="221"/>
       </Position1>
       <Position2>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="90" Column="30" TopLine="76"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="58" Column="77" TopLine="55"/>
       </Position2>
       <Position3>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="120" Column="12" TopLine="106"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="245" Column="3" TopLine="229"/>
       </Position3>
       <Position4>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="220" Column="1" TopLine="197"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="237" Column="3" TopLine="221"/>
       </Position4>
       <Position5>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="210" Column="12" TopLine="197"/>
+        <Filename Value="KM_Game.pas"/>
+        <Caret Line="94" Column="41" TopLine="86"/>
       </Position5>
       <Position6>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="31" Column="16" TopLine="29"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="212" Column="21" TopLine="196"/>
       </Position6>
       <Position7>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="102" Column="56" TopLine="84"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="55" Column="15" TopLine="39"/>
       </Position7>
       <Position8>
-        <Filename Value="KM_InterfaceGamePlay.pas"/>
-        <Caret Line="468" Column="23" TopLine="454"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="266" Column="13" TopLine="250"/>
       </Position8>
       <Position9>
-        <Filename Value="KM_InterfaceGamePlay.pas"/>
-        <Caret Line="1778" Column="80" TopLine="1763"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="52" Column="15" TopLine="36"/>
       </Position9>
       <Position10>
         <Filename Value="KM_Settings.pas"/>
-        <Caret Line="10" Column="23" TopLine="1"/>
+        <Caret Line="223" Column="8" TopLine="221"/>
       </Position10>
       <Position11>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="267" Column="9" TopLine="242"/>
+        <Filename Value="KM_Game.pas"/>
+        <Caret Line="103" Column="19" TopLine="87"/>
       </Position11>
       <Position12>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="250" Column="28" TopLine="242"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="215" Column="13" TopLine="196"/>
       </Position12>
       <Position13>
-        <Filename Value="KM_InterfaceGamePlay.pas"/>
-        <Caret Line="1902" Column="39" TopLine="1888"/>
+        <Filename Value="KM_Music.pas"/>
+        <Caret Line="116" Column="3" TopLine="98"/>
       </Position13>
       <Position14>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="63" Column="26" TopLine="47"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="212" Column="29" TopLine="196"/>
       </Position14>
       <Position15>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="7" Column="53" TopLine="1"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="55" Column="26" TopLine="39"/>
       </Position15>
       <Position16>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="35" Column="25" TopLine="21"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="264" Column="31" TopLine="247"/>
       </Position16>
       <Position17>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="62" Column="18" TopLine="45"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="212" Column="21" TopLine="196"/>
       </Position17>
       <Position18>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="846" Column="32" TopLine="832"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="266" Column="24" TopLine="250"/>
       </Position18>
       <Position19>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="76" Column="28" TopLine="49"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="237" Column="3" TopLine="221"/>
       </Position19>
       <Position20>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="1061" Column="33" TopLine="1045"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="245" Column="3" TopLine="229"/>
       </Position20>
       <Position21>
         <Filename Value="KM_Game.pas"/>
-        <Caret Line="15" Column="13" TopLine="1"/>
+        <Caret Line="103" Column="19" TopLine="87"/>
       </Position21>
       <Position22>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="72" Column="69" TopLine="58"/>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="264" Column="27" TopLine="248"/>
       </Position22>
       <Position23>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="919" Column="73" TopLine="912"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="212" Column="21" TopLine="196"/>
       </Position23>
       <Position24>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="15" Column="1" TopLine="1"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="296" Column="3" TopLine="268"/>
       </Position24>
       <Position25>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="70" Column="34" TopLine="56"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="298" Column="24" TopLine="271"/>
       </Position25>
       <Position26>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="917" Column="38" TopLine="903"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="5" Column="41" TopLine="1"/>
       </Position26>
       <Position27>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="964" Column="21" TopLine="952"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="161" Column="20" TopLine="145"/>
       </Position27>
       <Position28>
-        <Filename Value="KM_InterfaceMainMenu.pas"/>
-        <Caret Line="172" Column="11" TopLine="157"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="56" Column="27" TopLine="40"/>
       </Position28>
       <Position29>
-        <Filename Value="KM_InterfaceGamePlay.pas"/>
-        <Caret Line="227" Column="123" TopLine="225"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="68" Column="11" TopLine="52"/>
       </Position29>
       <Position30>
-        <Filename Value="KM_InterfaceGamePlay.pas"/>
-        <Caret Line="309" Column="1" TopLine="293"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="3" Column="36" TopLine="1"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
