--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -53,8 +53,8 @@
         <UnitName Value="KM_Unit1"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="88"/>
-        <CursorPos X="50" Y="99"/>
+        <TopLine Value="147"/>
+        <CursorPos X="3" Y="163"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -411,11 +411,10 @@
         <Filename Value="KM_Sound.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Sound"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
-        <CursorPos X="32" Y="3"/>
+        <CursorPos X="20" Y="10"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -819,10 +818,11 @@
       <Unit83>
         <Filename Value="KM_Music.pas"/>
         <UnitName Value="KM_Music"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="98"/>
-        <CursorPos X="3" Y="116"/>
+        <TopLine Value="246"/>
+        <CursorPos X="1" Y="276"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="12"/>
         <Loaded Value="True"/>
@@ -869,124 +869,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="237" Column="3" TopLine="221"/>
+        <Filename Value="KM_Game.pas"/>
+        <Caret Line="94" Column="41" TopLine="86"/>
       </Position1>
       <Position2>
         <Filename Value="KM_Sound.pas"/>
-        <Caret Line="58" Column="77" TopLine="55"/>
+        <Caret Line="212" Column="21" TopLine="196"/>
       </Position2>
       <Position3>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="245" Column="3" TopLine="229"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="55" Column="15" TopLine="39"/>
       </Position3>
       <Position4>
         <Filename Value="KM_Settings.pas"/>
-        <Caret Line="237" Column="3" TopLine="221"/>
+        <Caret Line="266" Column="13" TopLine="250"/>
       </Position4>
       <Position5>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="94" Column="41" TopLine="86"/>
-      </Position5>
-      <Position6>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="212" Column="21" TopLine="196"/>
-      </Position6>
-      <Position7>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="55" Column="15" TopLine="39"/>
-      </Position7>
-      <Position8>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="266" Column="13" TopLine="250"/>
-      </Position8>
-      <Position9>
         <Filename Value="KM_Settings.pas"/>
         <Caret Line="52" Column="15" TopLine="36"/>
-      </Position9>
-      <Position10>
+      </Position5>
+      <Position6>
         <Filename Value="KM_Settings.pas"/>
         <Caret Line="223" Column="8" TopLine="221"/>
-      </Position10>
-      <Position11>
+      </Position6>
+      <Position7>
         <Filename Value="KM_Game.pas"/>
         <Caret Line="103" Column="19" TopLine="87"/>
-      </Position11>
-      <Position12>
+      </Position7>
+      <Position8>
         <Filename Value="KM_Sound.pas"/>
         <Caret Line="215" Column="13" TopLine="196"/>
-      </Position12>
-      <Position13>
+      </Position8>
+      <Position9>
         <Filename Value="KM_Music.pas"/>
         <Caret Line="116" Column="3" TopLine="98"/>
-      </Position13>
-      <Position14>
+      </Position9>
+      <Position10>
         <Filename Value="KM_Sound.pas"/>
         <Caret Line="212" Column="29" TopLine="196"/>
-      </Position14>
-      <Position15>
+      </Position10>
+      <Position11>
         <Filename Value="KM_Sound.pas"/>
         <Caret Line="55" Column="26" TopLine="39"/>
+      </Position11>
+      <Position12>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="264" Column="31" TopLine="247"/>
+      </Position12>
+      <Position13>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="212" Column="21" TopLine="196"/>
+      </Position13>
+      <Position14>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="266" Column="24" TopLine="250"/>
+      </Position14>
+      <Position15>
+        <Filename Value="KM_Settings.pas"/>
+        <Caret Line="237" Column="3" TopLine="221"/>
       </Position15>
       <Position16>
         <Filename Value="KM_Settings.pas"/>
-        <Caret Line="264" Column="31" TopLine="247"/>
+        <Caret Line="245" Column="3" TopLine="229"/>
       </Position16>
       <Position17>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="212" Column="21" TopLine="196"/>
+        <Filename Value="KM_Game.pas"/>
+        <Caret Line="103" Column="19" TopLine="87"/>
       </Position17>
       <Position18>
         <Filename Value="KM_Settings.pas"/>
-        <Caret Line="266" Column="24" TopLine="250"/>
+        <Caret Line="264" Column="27" TopLine="248"/>
       </Position18>
       <Position19>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="237" Column="3" TopLine="221"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="212" Column="21" TopLine="196"/>
       </Position19>
       <Position20>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="245" Column="3" TopLine="229"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="296" Column="3" TopLine="268"/>
       </Position20>
       <Position21>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="103" Column="19" TopLine="87"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="298" Column="24" TopLine="271"/>
       </Position21>
       <Position22>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="264" Column="27" TopLine="248"/>
+        <Filename Value="KM_Sound.pas"/>
+        <Caret Line="5" Column="41" TopLine="1"/>
       </Position22>
       <Position23>
         <Filename Value="KM_Sound.pas"/>
-        <Caret Line="212" Column="21" TopLine="196"/>
+        <Caret Line="161" Column="20" TopLine="145"/>
       </Position23>
       <Position24>
         <Filename Value="KM_Sound.pas"/>
-        <Caret Line="296" Column="3" TopLine="268"/>
+        <Caret Line="56" Column="27" TopLine="40"/>
       </Position24>
       <Position25>
         <Filename Value="KM_Sound.pas"/>
-        <Caret Line="298" Column="24" TopLine="271"/>
+        <Caret Line="68" Column="11" TopLine="52"/>
       </Position25>
       <Position26>
         <Filename Value="KM_Sound.pas"/>
-        <Caret Line="5" Column="41" TopLine="1"/>
+        <Caret Line="3" Column="36" TopLine="1"/>
       </Position26>
       <Position27>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="161" Column="20" TopLine="145"/>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="99" Column="50" TopLine="192"/>
       </Position27>
       <Position28>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="56" Column="27" TopLine="40"/>
+        <Filename Value="KM_Music.pas"/>
+        <Caret Line="116" Column="3" TopLine="98"/>
       </Position28>
       <Position29>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="68" Column="11" TopLine="52"/>
+        <Filename Value="KM_Music.pas"/>
+        <Caret Line="229" Column="1" TopLine="203"/>
       </Position29>
       <Position30>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="3" Column="36" TopLine="1"/>
+        <Filename Value="KM_Music.pas"/>
+        <Caret Line="235" Column="3" TopLine="222"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
