--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -32,16 +32,18 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="88">
+    <Units Count="89">
       <Unit0>
         <Filename Value="KaM_Remake.dpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KaM_Remake"/>
+        <EditorIndex Value="6"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="13"/>
-        <CursorPos X="38" Y="27"/>
+        <TopLine Value="30"/>
+        <CursorPos X="19" Y="48"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit0>
       <Unit1>
@@ -51,13 +53,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="KM_Unit1"/>
-        <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="147"/>
-        <CursorPos X="3" Y="163"/>
+        <TopLine Value="1"/>
+        <CursorPos X="23" Y="13"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit1>
       <Unit2>
@@ -114,11 +114,13 @@
         <Filename Value="KM_CommonTypes.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_CommonTypes"/>
+        <EditorIndex Value="5"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="1"/>
+        <TopLine Value="65"/>
+        <CursorPos X="16" Y="73"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit7>
       <Unit8>
@@ -154,8 +156,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_UnitActionWalkTo"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="44"/>
-        <CursorPos X="19" Y="53"/>
+        <TopLine Value="143"/>
+        <CursorPos X="26" Y="68"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
         <DefaultSyntaxHighlighter Value="Text"/>
@@ -208,7 +210,7 @@
         <TopLine Value="23"/>
         <CursorPos X="49" Y="37"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="128"/>
+        <UsageCount Value="130"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit16>
       <Unit17>
@@ -226,11 +228,13 @@
         <Filename Value="KM_Defaults.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Defaults"/>
+        <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="850"/>
-        <CursorPos X="31" Y="854"/>
+        <TopLine Value="267"/>
+        <CursorPos X="28" Y="285"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit18>
       <Unit19>
@@ -260,24 +264,24 @@
         <Filename Value="KM_Game.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Game"/>
-        <EditorIndex Value="4"/>
         <WindowIndex Value="0"/>
         <TopLine Value="94"/>
-        <CursorPos X="38" Y="102"/>
+        <CursorPos X="44" Y="96"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit21>
       <Unit22>
         <Filename Value="KM_Houses.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Houses"/>
+        <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="219"/>
-        <CursorPos X="114" Y="233"/>
+        <TopLine Value="63"/>
+        <CursorPos X="75" Y="81"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit22>
       <Unit23>
@@ -398,26 +402,22 @@
         <Filename Value="KM_Settings.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Settings"/>
-        <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
         <TopLine Value="255"/>
         <CursorPos X="26" Y="262"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit34>
       <Unit35>
         <Filename Value="KM_Sound.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Sound"/>
-        <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="20" Y="10"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit35>
       <Unit36>
@@ -425,8 +425,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Terrain"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="179"/>
-        <CursorPos X="70" Y="193"/>
+        <TopLine Value="2130"/>
+        <CursorPos X="15" Y="2154"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
         <DefaultSyntaxHighlighter Value="Text"/>
@@ -493,11 +493,13 @@
       <Unit44>
         <Filename Value="KaM_Remake.lpr"/>
         <UnitName Value="KaM_Remake"/>
+        <EditorIndex Value="7"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="29"/>
-        <CursorPos X="32" Y="29"/>
+        <TopLine Value="30"/>
+        <CursorPos X="37" Y="38"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit44>
       <Unit45>
@@ -740,22 +742,26 @@
         <Filename Value="KM_Units_Warrior.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Units_Warrior"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
         <TopLine Value="184"/>
         <CursorPos X="11" Y="190"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="29"/>
+        <UsageCount Value="31"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit74>
       <Unit75>
         <Filename Value="KM_UnitTask_Build.pas"/>
         <UnitName Value="KM_UnitTask_Build"/>
-        <TopLine Value="113"/>
-        <CursorPos X="1" Y="127"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="4"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="761"/>
+        <CursorPos X="25" Y="793"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="8"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit75>
       <Unit76>
@@ -790,11 +796,15 @@
       </Unit79>
       <Unit80>
         <Filename Value="KM_UnitTaskAttackHouse.pas"/>
+        <IsPartOfProject Value="True"/>
         <UnitName Value="KM_UnitTaskAttackHouse"/>
-        <TopLine Value="81"/>
-        <CursorPos X="16" Y="24"/>
+        <EditorIndex Value="3"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="14"/>
+        <CursorPos X="22" Y="27"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="9"/>
+        <UsageCount Value="22"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit80>
       <Unit81>
@@ -818,14 +828,11 @@
       <Unit83>
         <Filename Value="KM_Music.pas"/>
         <UnitName Value="KM_Music"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="3"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="246"/>
-        <CursorPos X="1" Y="276"/>
+        <TopLine Value="242"/>
+        <CursorPos X="49" Y="253"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="12"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit83>
       <Unit84>
@@ -850,8 +857,8 @@
       <Unit86>
         <Filename Value="KaM_Remake.lpi"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="80"/>
-        <CursorPos X="33" Y="93"/>
+        <TopLine Value="712"/>
+        <CursorPos X="1" Y="731"/>
         <SyntaxHighlighter Value="XML"/>
         <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Text"/>
@@ -866,127 +873,136 @@
         <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit87>
+      <Unit88>
+        <Filename Value="..\..\Lazarus\fpc\2.4.1\source\rtl\inc\objpash.inc"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="156"/>
+        <CursorPos X="18" Y="174"/>
+        <SyntaxHighlighter Value="FreePascal"/>
+        <UsageCount Value="10"/>
+        <DefaultSyntaxHighlighter Value="Text"/>
+      </Unit88>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="94" Column="41" TopLine="86"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="554" Column="6" TopLine="535"/>
       </Position1>
       <Position2>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="212" Column="21" TopLine="196"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="65" Column="24" TopLine="47"/>
       </Position2>
       <Position3>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="55" Column="15" TopLine="39"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="110" Column="1" TopLine="81"/>
       </Position3>
       <Position4>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="266" Column="13" TopLine="250"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="533" Column="1" TopLine="516"/>
       </Position4>
       <Position5>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="52" Column="15" TopLine="36"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="589" Column="9" TopLine="577"/>
       </Position5>
       <Position6>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="223" Column="8" TopLine="221"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="89" Column="29" TopLine="70"/>
       </Position6>
       <Position7>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="103" Column="19" TopLine="87"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="457" Column="1" TopLine="439"/>
       </Position7>
       <Position8>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="215" Column="13" TopLine="196"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="507" Column="19" TopLine="489"/>
       </Position8>
       <Position9>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="116" Column="3" TopLine="98"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="98" Column="34" TopLine="77"/>
       </Position9>
       <Position10>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="212" Column="29" TopLine="196"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="543" Column="1" TopLine="525"/>
       </Position10>
       <Position11>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="55" Column="26" TopLine="39"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="457" Column="1" TopLine="439"/>
       </Position11>
       <Position12>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="264" Column="31" TopLine="247"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="507" Column="1" TopLine="489"/>
       </Position12>
       <Position13>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="212" Column="21" TopLine="196"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="484" Column="1" TopLine="466"/>
       </Position13>
       <Position14>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="266" Column="24" TopLine="250"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="114" Column="1" TopLine="79"/>
       </Position14>
       <Position15>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="237" Column="3" TopLine="221"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="602" Column="11" TopLine="578"/>
       </Position15>
       <Position16>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="245" Column="3" TopLine="229"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="108" Column="15" TopLine="90"/>
       </Position16>
       <Position17>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="103" Column="19" TopLine="87"/>
+        <Filename Value="KM_CommonTypes.pas"/>
+        <Caret Line="614" Column="5" TopLine="579"/>
       </Position17>
       <Position18>
-        <Filename Value="KM_Settings.pas"/>
-        <Caret Line="264" Column="27" TopLine="248"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="554" Column="11" TopLine="542"/>
       </Position18>
       <Position19>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="212" Column="21" TopLine="196"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="545" Column="9" TopLine="536"/>
       </Position19>
       <Position20>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="296" Column="3" TopLine="268"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="590" Column="28" TopLine="572"/>
       </Position20>
       <Position21>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="298" Column="24" TopLine="271"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="625" Column="42" TopLine="593"/>
       </Position21>
       <Position22>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="5" Column="41" TopLine="1"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="592" Column="67" TopLine="574"/>
       </Position22>
       <Position23>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="161" Column="20" TopLine="145"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="639" Column="46" TopLine="616"/>
       </Position23>
       <Position24>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="56" Column="27" TopLine="40"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="682" Column="1" TopLine="662"/>
       </Position24>
       <Position25>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="68" Column="11" TopLine="52"/>
+        <Filename Value="KM_Houses.pas"/>
+        <Caret Line="81" Column="75" TopLine="63"/>
       </Position25>
       <Position26>
-        <Filename Value="KM_Sound.pas"/>
-        <Caret Line="3" Column="36" TopLine="1"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="687" Column="1" TopLine="681"/>
       </Position26>
       <Position27>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="99" Column="50" TopLine="192"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="692" Column="1" TopLine="674"/>
       </Position27>
       <Position28>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="116" Column="3" TopLine="98"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="710" Column="25" TopLine="690"/>
       </Position28>
       <Position29>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="229" Column="1" TopLine="203"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="747" Column="40" TopLine="722"/>
       </Position29>
       <Position30>
-        <Filename Value="KM_Music.pas"/>
-        <Caret Line="235" Column="3" TopLine="222"/>
+        <Filename Value="KM_UnitTask_Build.pas"/>
+        <Caret Line="756" Column="46" TopLine="748"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
