--- a/KaM Editor/KM_Editor.cfg
+++ b/KaM Editor/KM_Editor.cfg
@@ -31,9 +31,12 @@
 -M
 -$M16384,1048576
 -K$00400000
--LE"c:\program files\borland\delphi6\Projects\Bpl"
--LN"c:\program files\borland\delphi6\Projects\Bpl"
--U"..\ Common "
--O"..\ Common "
--I"..\ Common "
--R"..\ Common "
+-LE"c:\program files\borland\delphi7\Projects\Bpl"
+-LN"c:\program files\borland\delphi7\Projects\Bpl"
+-U"..\Common"
+-O"..\Common"
+-I"..\Common"
+-R"..\Common"
+-w-UNSAFE_TYPE
+-w-UNSAFE_CODE
+-w-UNSAFE_CAST
