--- a/KaM_Remake.cfg
+++ b/KaM_Remake.cfg
@@ -33,10 +33,10 @@
 -K$00400000
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
--U".\Common"
--O".\Common"
--I".\Common"
--R".\Common"
+-U".\Common;.\Common\pngimage"
+-O".\Common;.\Common\pngimage"
+-I".\Common;.\Common\pngimage"
+-R".\Common;.\Common\pngimage"
 -w-UNSAFE_TYPE
 -w-UNSAFE_CODE
 -w-UNSAFE_CAST
